# ai-sre-agent

./: .editorconfig  .gitignore  README.md
.copilot/: prompts.md
.github/workflows/: checks-agent.yaml  checks-helm.yaml  checks-operator.yaml  ci.yaml
agent/: .env.example  README.md  dev.py  pyproject.toml  requirements.txt
agent/.copilot/: prompts.md
agent/configs/: README.md  agents.yaml.example
agent/src/: __init__.py  config.py
agent/src/agents/: analysis.py
agent/src/api/: main.py
agent/src/tools/: kubernetes.py
agent/src/workflows/: sre_workflow.py
operator/: README.md
operator/.copilot/: prompts.md
shared/: README.md
